--- a/link-images/index.html
+++ b/link-images/index.html
@@ -8,7 +8,31 @@
         <h1>Аль Пачино</h1>
         <img src="images/AlPaccino.jpeg" width="800" height="600"
         alt="Al Pacino">
-        
+        <ul>
+            <li><a href="#biography">Биография</a></li>
+            <li><a href="#bestfilm">Лучшие фильмы</a></li>
+            <li><a href="#oscar">Оскар за лучшую мужскую роль</a></li>
 
+        </ul>
+        <h2 id="biography">Биография</h2>
+        <p><em><strong>Альфредо Джеймс Пачино</strong></em> появился на свет в семье страховщика Сальваторе Пачино и домохозяйки Роуз Джерарди. Бабушка и дедушка Альфредо по материнской линии переехали в Штаты из сицилийского городка Корлеоне; отец будущего актера тоже имел итальянские корни.</p>
+        <p>В подростковом возрасте Альфредо, или, как гласил его первый псевдоним, Сонни Скотт, хотел стать профессиональным бейсболистом, но позже, после просмотра постановки чеховской «Чайки» это желание сместила мечта об актерской карьере: «Спектакль начался… и тут же закончился. Пролетел как одно мгновение. Это было волшебство. Помню, я задумался: «Кем же надо быть, чтобы написать такое, а?». Я тут же раздобыл сборник рассказов Чехова». Вскоре юноша поступил в знаменитую Школу исполнительных искусств имени Фьорелло Ла Гуардия в Нью-Йорке, за что получил от товарищей прозвище «Актер».</p>
+        <h2 id="bestfilm">Top-5 Филмов</h2>
+        <ol>
+            <li>Крестный отец</li>
+            <li>Правосудие для всех</li>
+            <li>Донни Браско</li>
+            <li>Лицо со шрамом</li>
+            <li>Путь Карлито</li>
+        </ol>
+        <h2 id="oscar">Запах женщины</h2>
+        <p><strong>"Запах женщины"</strong> - кинофильм, американский ремейк одноимённого итальянского фильма Дино Ризи.Фильм снят по роману Джованни Арпино (англ. Giovanni Arpino) «Мрак и мёд» (1969). Исполнитель главной роли <strong>Аль Пачино за актёрскую работу в ленте удостоился премий «Оскар»</strong> и «Золотой глобус».</p>
+        <h2>Ссылки</h2>
+        <ul>
+            <li><a href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B0%D1%87%D0%B8%D0%BD%D0%BE,_%D0%90%D0%BB%D1%8C" target='_blank'>Страница в Вики.</a></li>
+              <li>
+                <a href="https://www.kinopoisk.ru/name/26240/" target='_blank'>Страница в Кинопоискн</a>
+              </li>
+        </ul>
     </body>
 </html>
