--- a/training/index.html
+++ b/training/index.html
@@ -14,8 +14,24 @@
 
     <p>Мы также будем работать со ссылками, поэтому вот ссылка на <a href='https://moscoding.ru/'>Moscow Coding School</a>.</p>
 
-    <div class="button">Кнопка 1</div>
-
-    <div class="button call-to-action">Кнопка 2</div>
+    <a class="button" href="nowhere.html">Кнопка один</a>
+    <a class="button call-to-action" href="nowhere.html">Кнопка два</a>
+    <div class="sidebar">
+      <p>Если бы у этой страницы был сайдбар...</p>
+      <p>У нас были бы проблемы с псевдоклассами.</p>
+    </div>
   </body>
 </html>
+
+<!-- 
+<div class="bigblokz">
+  <div class="blokz"></div>
+  <div class="blokz"></div>
+  <div class="blokz"></div>
+  <div class="blokz"></div>
+  <div class="blokz"></div>
+  <div class="blokz"></div>
+  <div class="blokz"></div>
+  <div class="blokz"></div>
+  <div class="blokz"></div>
+</div> -->
