--- a/Flexbox/flexbox.html
+++ b/Flexbox/flexbox.html
@@ -9,9 +9,39 @@
     <div class="menu-container">
       <div class="menu">
         <div class="date">14.08.2016</div>
-        <div class="signup">Зарегистрироваться</div>
-        <div class="login">Войти</div>
+          <div class="links">
+            <div class="signup">Зарегистрироваться</div>
+            <div class="login">Войти</div>
+          </div>
+        </div>
     </div>
-  </div>
+    <div class="header-container">
+      <div class="header">
+        <div class="subscribe">Подписаться▾</div>
+        <div class="logo"><img src="images/WOWLOGO.svg"/></div>
+        <div class="social"><img src="images/behance.svg"/></div>
+        <div class="social"><img src="images/twitter.svg"/></div>
+        <div class="social"><img src="images/spotify.svg"/></div>
+      </div>
+    </div>
+    <div class="photo-grid-container">
+      <div class="photo-grid">
+        <div class="photo-grid-item first-item">
+          <img src="images/one.svg"/>
+        </div>
+        <div class="photo-grid-item">
+          <img src="images/two.svg"/>
+        </div>
+        <div class="photo-grid-item">
+          <img src="images/three.svg"/>
+        </div>
+        <div class="photo-grid-item">
+          <img src="images/four.svg"/>
+        </div>
+        <div class="photo-grid-item last-item">
+          <img src="images/five.svg"/>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
