--- a/Flexbox/flexbox.html
+++ b/Flexbox/flexbox.html
@@ -8,12 +8,10 @@
   <body>
     <div class="menu-container">
       <div class="menu">
-        <div class="date">14.08.2016</div>
-          <div class="links">
-            <div class="signup">Зарегистрироваться</div>
-            <div class="login">Войти</div>
-          </div>
-        </div>
+        <div class="date">2020</div>
+        <div class="signup">Зарегистрироваться</div>
+        <div class="login">Войти</div>
+      </div>
     </div>
     <div class="header-container">
       <div class="header">
@@ -43,5 +41,11 @@
         </div>
       </div>
     </div>
+    <div class="footer">
+      <div class="footer-item footer-one"></div>
+      <div class="footer-item footer-two"></div>
+      <div class="footer-item footer-three"></div>
+    </div>
+    
   </body>
 </html>
