--- a/third_project/proj3.html
+++ b/third_project/proj3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
@@ -6,6 +6,10 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <div></div>
+        <div class="header-container">
+            <div class="header">
+                <div class="header-name">Some TEXT</div>
+            </div>
+        </div>
     </body>
 </html>
