--- a/third_project/proj3.html
+++ b/third_project/proj3.html
@@ -6,10 +6,13 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <div class="header-container">
-            <div class="header">
-                <div class="header-name">Some TEXT</div>
+        <div class="common-container">
+            <div class="header-container">
+                <div class="header">
+                    <div class="header-name">Some TEXT</div>
+                </div>
             </div>
+            <div class="image-box"></div>
         </div>
     </body>
 </html>
