--- a/third_project/proj3.html
+++ b/third_project/proj3.html
@@ -13,6 +13,9 @@
                 </div>
             </div>
             <div class="image-box"></div>
+            <div class="links-box">
+                <div class="link-text-box"></div>
+            </div>
         </div>
     </body>
 </html>
