--- a/third_project/proj3.html
+++ b/third_project/proj3.html
@@ -9,13 +9,20 @@
         <div class="common-container">
             <div class="header-container">
                 <div class="header">
-                    <div class="header-name">Some TEXT</div>
+                    <div class="header-name">Вито Скалетта</div>
                 </div>
             </div>
             <div class="image-box"></div>
             <div class="links-box">
-                <div class="link-text-box"></div>
+                <div class="link-text-box">СТРАНИЦА ОБ АРТИСТЕ / NEXT HOMEWORK / ANOTHER HOMEWORK / ETC</div>
             </div>
+            <div class="landing-box">
+                <div class="landing-text-box">
+                    <div class="about-yourself">Немного о себе!</div>
+                    <div class="landing-content">Меня зовут Вито Скалетта. Я родился на Сицилии, в 25-м году. </div>
+                </div>
+            </div>
+            <div class="footer-box"></div>
         </div>
     </body>
 </html>
