--- a/third_project/proj3.html
+++ b/third_project/proj3.html
@@ -22,7 +22,9 @@
                     <div class="landing-content">Меня зовут Вито Скалетта. Я родился на Сицилии, в 25-м году. </div>
                 </div>
             </div>
-            <div class="footer-box"></div>
+            <div class="footer-box">
+                <div class="logo-box"></div>
+            </div>
         </div>
     </body>
 </html>
