--- a/third_project/proj3.html
+++ b/third_project/proj3.html
@@ -24,6 +24,7 @@
             </div>
             <div class="footer-box">
                 <div class="logo-box"></div>
+                <div class="footer-text">Основы веб-разработки</div>
             </div>
         </div>
     </body>
