--- a/fourth_project/proj4.html
+++ b/fourth_project/proj4.html
@@ -8,8 +8,14 @@
 
 <body>
     <div class="common-box">
-        <div class="header-box"></div>
-        <div class="middle-box"></div>
+        <div class="header-box">
+            <div class="header-text-box">大きく作るホールケーキのレシピです。切り分けてパーティーやおもてなしにおすすめです</div>
+        </div>
+        <div class="middle-box">
+            <div class="main-box"></div>
+            <div class="main-box"></div>
+            <div class="main-box"></div>
+        </div>
         <div class="footer-box"></div>
     </div>
 </body>
