--- a/fourth_project/proj4.html
+++ b/fourth_project/proj4.html
@@ -12,10 +12,30 @@
             <div class="header-text-box">大きく作るホールケーキのレシピです。切り分けてパーティーやおもてなしにおすすめです</div>
         </div>
         <div class="middle-box">
-            <div class="main-box"></div>
-            <div class="main-box"></div>
-            <div class="main-box"></div>
+            <div class="main-box">
+                <div class="main-box-header">Fresh Strawberry Tart</div>
+                <div class="main-box-text"><p>TART </br> 80g unsalted butter </br> 45g powder sugar </br> pinch of salt </br> 30g egg </br> 20g ground almonds </br> 130g cake flour </br> 25g bread flour</p>
+                    <p>ALMOND CREAM </br> 50g unsalted butter </br> 50g sugar </br> 50g ground almonds </br> 1 egg </br> 1 tsp ~ Vanilla extract </br> 6g cake flour</p>
+                    <p>CUSTARD CREAM </br> 2 egg yolks </br> 40g sugar </br> 12g cake flour </br> 200ml milk </br> vanilla beans </br> 100ml heavy cream </br> 8g sugar</p>
+                    <p>TOPPING </br> chocolate </br> strawberry</p></div>
+            </div>
+            <div class="main-box"><div class="main-box-header">Fresh Strawberry Tart</div>
+            <div class="main-box-text"><p>TART </br> 80g unsalted butter </br> 45g powder sugar </br> pinch of salt </br> 30g egg </br> 20g ground almonds </br> 130g cake flour </br> 25g bread flour</p>
+                <p>ALMOND CREAM </br> 50g unsalted butter </br> 50g sugar </br> 50g ground almonds </br> 1 egg </br> 1 tsp ~ Vanilla extract </br> 6g cake flour</p>
+                <p>CUSTARD CREAM </br> 2 egg yolks </br> 40g sugar </br> 12g cake flour </br> 200ml milk </br> vanilla beans </br> 100ml heavy cream </br> 8g sugar</p>
+                <p>TOPPING </br> chocolate </br> strawberry</p></div></div>
+            <div class="main-box"><div class="main-box-header">Fresh Strawberry Tart</div>
+            <div class="main-box-text"><p>TART </br> 80g unsalted butter </br> 45g powder sugar </br> pinch of salt </br> 30g egg </br> 20g ground almonds </br> 130g cake flour </br> 25g bread flour</p>
+                <p>ALMOND CREAM </br> 50g unsalted butter </br> 50g sugar </br> 50g ground almonds </br> 1 egg </br> 1 tsp ~ Vanilla extract </br> 6g cake flour</p>
+                <p>CUSTARD CREAM </br> 2 egg yolks </br> 40g sugar </br> 12g cake flour </br> 200ml milk </br> vanilla beans </br> 100ml heavy cream </br> 8g sugar</p>
+                <p>TOPPING </br> chocolate </br> strawberry</p></div></div>
         </div>
-        <div class="footer-box"></div>
+        <div class="footer-box">
+            <div class="footer-container-text">
+                <div class="footer-text">
+                    <p>COPYRIGHT 2022</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
