--- a/fourth_project/proj4.html
+++ b/fourth_project/proj4.html
@@ -36,6 +36,7 @@
                     <p>COPYRIGHT 2022</p>
                 </div>
             </div>
+            <div class="img-box"></div>
         </div>
     </div>
 </body>
