--- a/advanced_positioning/scheme.html
+++ b/advanced_positioning/scheme.html
@@ -6,7 +6,6 @@
     <link href="styles.css" rel="stylesheet"/>
   </head>
   <body>
-
     <div class="container">
       <div class="example relative">
         <div class="item"><img src="images/STATIC.svg" /></div>
@@ -30,6 +29,18 @@
         <div class="item"><img src="images/STATIC.svg" /></div>
      </div>
     </div>
-
+    <script>
+      var left = 0;
+      function frame() {
+        var element = document.querySelector('.item-relative');
+        left += 2;
+        element.style.left = left + 'px';
+    
+        if (left >= 300) {
+         clearInterval(id)
+        }
+      }
+      var id = setInterval(frame, 10)
+    </script>
   </body>
 </html>
