--- a/fifth_project/evian.html
+++ b/fifth_project/evian.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="evian.css"/>
 </head>
 <body>
-    <header class="header">sdd
+    <header class="header">
+        <div class="evian">evian</div>
+        <ul class="header-info">
+            <li a href="#">link 1</li>
+            <li a href="#">link 2</li>
+            <li a href="#">link 3</li>
+        </ul>
     </header>
-    <footer class="footer">sd
-    </footer>
+    <footer class="footer"></footer>
 </body>
 </html>
