--- a/fifth_project/evian.html
+++ b/fifth_project/evian.html
@@ -17,13 +17,51 @@
     <div class="logo">
         <p class="logo-text">Glass Limited Edition</p>
     </div>
-    <div class="pink-box">
-        <div class="description">
+    <div class="pink-box-cont">
+        <div class="pink-box">
             <p>Our Water </br> </br>
                 Evian natural spring water contains only naturally occurring electrolytes from our unique origin. How? As our water travels to the source through layers of glacial rocks, it becomes enriched with a unique blend of minerals and electrolytes giving evian its distinctive, cool, crisp taste. This protected underground journey in the heart of the French Alps has given evian water its unique taste and mineral composition for over 200 years since Marquis first discovered it!
             </p>
         </div>
     </div>
-    <footer class="footer"></footer>
+    
+    <div class="bottle">
+        <div class="bottle-photo">
+            <img src="images/wang.png"/>
+            <p>Alexander Wang 2016 </br>
+                750 mL</p>
+        </div>
+
+        <div class="bottle-photo">
+            <img src="images/blue.png"/>
+            <p>Christian Lacroix 2017 </br>
+                750 mL</p>
+        </div>
+
+        <div class="bottle-photo">
+            <img src="images/chiara.png"/>
+            <p>Chiara Ferragni 2018 </br>
+                750 mL</p>
+        </div>
+    </div>
+
+    <div class="pink-box-cont">
+        <div class="pink-box composition">
+            <div class="composition-bottle"><img src="images/glass.png"></div>
+            <p>Electrolytes & Mineral Composition (mg/l)
+            </br></br>
+                Neutrally balanced pH: 7.2</br>
+                Calcium: 80 / Magnesium: 26 / Potassium: 1</br>
+                Bicarbonates: 360 / Sulfates: 14 / Chlorides: 10 / Silica: 15
+            </br></br>
+                evian has naturally occuring elecrolytes contributing to the taste nature intended.
+            </p>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="copyright">
+            <p>copyright 2022</p>
+        </div>
+    </footer>
 </body>
 </html>
