--- a/responsive_design/index.html
+++ b/responsive_design/index.html
@@ -5,8 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Респонсивный дизайн</title>
     <link rel="stylesheet" href="styles.css"/>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" /> -->
   </head>
   <body>
-    <!-- Тут ничего нет -->
+    <div class="page">
+      <div class="section menu"></div>
+      <div class="section header">
+        <img src="images/HEADER.svg"/>
+      </div>
+      <div class="section content">
+        <img src="images/CONTENT.svg"/>
+      </div>
+      <div class="section sign_up">
+        <img src="images/SIGN_UP.svg"/>
+      </div>
+      <div class="section feature-1">
+        <img src="images/FEATURE.svg"/>
+      </div>
+      <div class="section feature-2">
+        <img src="images/FEATURE.svg"/>
+      </div>
+      <div class="section feature-3">
+        <img src="images/FEATURE.svg"/>
+      </div>
+  </div>
   </body>
 </html>
