--- a/sixth_project/responsive.html
+++ b/sixth_project/responsive.html
@@ -7,4 +7,11 @@
         <link rel="stylesheet" href="responsive.css"/>
         <meta name="viewport" content="device-width, initial-scale=1.0, maximum-scale=1.0"/> 
     </head>
+    <body>
+        <div class="page">
+            <header class="header-cont"></header>
+            <div class="main-cont"></div>
+            <footer class="footer-cont"></footer>
+        </div>
+    </body>
 </html>
